[gd_scene load_steps=77 format=3 uid="uid://bivikni6fft8s"]

[ext_resource type="Script" uid="uid://blpackgye0wko" path="res://Scenes/player.gd" id="1_tx1dd"]
[ext_resource type="Texture2D" uid="uid://b0x58uxlxcod3" path="res://imports/Sprites/Ali/Ali attack up.png" id="2_f1ek2"]
[ext_resource type="Texture2D" uid="uid://bvyruhe00yvff" path="res://imports/Sprites/Ali/Ali Up idle.png" id="2_x3wgy"]
[ext_resource type="Texture2D" uid="uid://bmv2163as7c2o" path="res://imports/Sprites/Ali/Ali Up.png" id="3_3smsa"]
[ext_resource type="Texture2D" uid="uid://b0g6ad87e1ru6" path="res://imports/Sprites/Ali/Ali Idle.png" id="3_fkybt"]
[ext_resource type="Texture2D" uid="uid://vnj8lxsn2dbe" path="res://imports/Sprites/Ali/Ali Down.png" id="5_8erm5"]
[ext_resource type="Texture2D" uid="uid://bv3tipaw4xff6" path="res://imports/Sprites/Ali/Ali attack down.png" id="5_tx1dd"]
[ext_resource type="Texture2D" uid="uid://bmd1mvythcp6q" path="res://imports/Sprites/Ali/Ali Walk Test.png" id="6_x3wgy"]
[ext_resource type="Texture2D" uid="uid://2qljqdqh1sqq" path="res://imports/Sprites/Ali/Ali attack side.png" id="8_gymyn"]
[ext_resource type="Texture2D" uid="uid://bko3pwqja1hmk" path="res://imports/Sprites/Ali/side_idle_2.png" id="9_tx1dd"]
[ext_resource type="PackedScene" uid="uid://psdcgxrarhub" path="res://Scenes/interacting_component.tscn" id="11_gymyn"]
[ext_resource type="AudioStream" uid="uid://c3rvh35p18mww" path="res://imports/music/Retro 8 Bit Punch Sound Effect.wav" id="12_pu2lt"]
[ext_resource type="AudioStream" uid="uid://b21qdnxudck8d" path="res://imports/music/8-Bit Powerup.ogg" id="13_ukyrk"]
[ext_resource type="Texture2D" uid="uid://smxuwhi6tji2" path="res://imports/Sprites/Objects/shadow.png" id="14_7dp3o"]
[ext_resource type="AudioStream" uid="uid://7hyca3g1jqis" path="res://imports/music/rat bite.ogg" id="15_h4iuc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3smsa"]
size = Vector2(31, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuaoq"]
atlas = ExtResource("2_f1ek2")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_11gg7"]
atlas = ExtResource("2_f1ek2")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpa8y"]
atlas = ExtResource("2_f1ek2")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbwqj"]
atlas = ExtResource("2_f1ek2")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwi16"]
atlas = ExtResource("2_f1ek2")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi64h"]
atlas = ExtResource("2_x3wgy")
region = Rect2(0, 0, 90, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ijsl"]
atlas = ExtResource("2_x3wgy")
region = Rect2(90, 0, 90, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1odr"]
atlas = ExtResource("2_x3wgy")
region = Rect2(180, 0, 90, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gysh"]
atlas = ExtResource("2_x3wgy")
region = Rect2(270, 0, 90, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfarp"]
atlas = ExtResource("2_x3wgy")
region = Rect2(360, 0, 90, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_igrcy"]
atlas = ExtResource("3_3smsa")
region = Rect2(0, 0, 120, 116)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs7ks"]
atlas = ExtResource("3_3smsa")
region = Rect2(120, 0, 120, 116)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6n3p"]
atlas = ExtResource("3_3smsa")
region = Rect2(0, 116, 120, 116)

[sub_resource type="AtlasTexture" id="AtlasTexture_olqyp"]
atlas = ExtResource("3_3smsa")
region = Rect2(120, 116, 120, 116)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqm"]
atlas = ExtResource("5_tx1dd")
region = Rect2(0, 0, 170, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_ph33w"]
atlas = ExtResource("5_tx1dd")
region = Rect2(170, 0, 170, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ldla"]
atlas = ExtResource("5_tx1dd")
region = Rect2(340, 0, 170, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7t2e"]
atlas = ExtResource("5_tx1dd")
region = Rect2(510, 0, 170, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmr2m"]
atlas = ExtResource("5_tx1dd")
region = Rect2(680, 0, 170, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wgy"]
atlas = ExtResource("3_fkybt")
region = Rect2(0, 0, 90, 118)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpjfl"]
atlas = ExtResource("3_fkybt")
region = Rect2(90, 0, 90, 118)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6uwr"]
atlas = ExtResource("3_fkybt")
region = Rect2(180, 0, 90, 118)

[sub_resource type="AtlasTexture" id="AtlasTexture_83xs0"]
atlas = ExtResource("3_fkybt")
region = Rect2(270, 0, 90, 118)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypfnu"]
atlas = ExtResource("3_fkybt")
region = Rect2(360, 0, 90, 118)

[sub_resource type="AtlasTexture" id="AtlasTexture_wohnl"]
atlas = ExtResource("5_8erm5")
region = Rect2(0, 0, 115, 116)

[sub_resource type="AtlasTexture" id="AtlasTexture_36dho"]
atlas = ExtResource("5_8erm5")
region = Rect2(115, 0, 115, 116)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh6i2"]
atlas = ExtResource("5_8erm5")
region = Rect2(0, 116, 115, 116)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv4vc"]
atlas = ExtResource("5_8erm5")
region = Rect2(115, 116, 115, 116)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax3m3"]
atlas = ExtResource("8_gymyn")
region = Rect2(0, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vlem"]
atlas = ExtResource("8_gymyn")
region = Rect2(130, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eeqe"]
atlas = ExtResource("8_gymyn")
region = Rect2(260, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_5x828"]
atlas = ExtResource("8_gymyn")
region = Rect2(390, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1k8q"]
atlas = ExtResource("8_gymyn")
region = Rect2(520, 0, 130, 130)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6mvm"]
atlas = ExtResource("9_tx1dd")
region = Rect2(0, 0, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_57lvd"]
atlas = ExtResource("9_tx1dd")
region = Rect2(120, 0, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie7r7"]
atlas = ExtResource("9_tx1dd")
region = Rect2(240, 0, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_vq3lt"]
atlas = ExtResource("9_tx1dd")
region = Rect2(360, 0, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_pukcj"]
atlas = ExtResource("9_tx1dd")
region = Rect2(480, 0, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_1htnp"]
atlas = ExtResource("9_tx1dd")
region = Rect2(600, 0, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_m376e"]
atlas = ExtResource("9_tx1dd")
region = Rect2(720, 0, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_6b312"]
atlas = ExtResource("9_tx1dd")
region = Rect2(840, 0, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_lisdf"]
atlas = ExtResource("9_tx1dd")
region = Rect2(960, 0, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1x1j"]
atlas = ExtResource("9_tx1dd")
region = Rect2(1080, 0, 120, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("6_x3wgy")
region = Rect2(0, 0, 130, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("6_x3wgy")
region = Rect2(130, 0, 130, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("6_x3wgy")
region = Rect2(260, 0, 130, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("6_x3wgy")
region = Rect2(390, 0, 130, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("6_x3wgy")
region = Rect2(520, 0, 130, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("6_x3wgy")
region = Rect2(650, 0, 130, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyrk"]
atlas = ExtResource("6_x3wgy")
region = Rect2(780, 0, 130, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dp3o"]
atlas = ExtResource("6_x3wgy")
region = Rect2(910, 0, 130, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4iuc"]
atlas = ExtResource("6_x3wgy")
region = Rect2(1040, 0, 130, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd4e3"]
atlas = ExtResource("6_x3wgy")
region = Rect2(1170, 0, 130, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqcod"]
atlas = ExtResource("6_x3wgy")
region = Rect2(1300, 0, 130, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gxox"]
atlas = ExtResource("6_x3wgy")
region = Rect2(1430, 0, 130, 125)

[sub_resource type="SpriteFrames" id="SpriteFrames_bi64h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuaoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11gg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpa8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbwqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwi16")
}],
"loop": true,
"name": &"back_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 0.8,
"texture": SubResource("AtlasTexture_bi64h")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_2ijsl")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_p1odr")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_0gysh")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_vfarp")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.8,
"texture": SubResource("AtlasTexture_igrcy")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_l6n3p")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_olqyp")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ph33w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ldla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7t2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmr2m")
}],
"loop": true,
"name": &"front_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 2.5,
"texture": SubResource("AtlasTexture_x3wgy")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_wpjfl")
}, {
"duration": 0.4,
"texture": SubResource("AtlasTexture_y6uwr")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_83xs0")
}, {
"duration": 2.5,
"texture": SubResource("AtlasTexture_ypfnu")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wohnl")
}, {
"duration": 1.1,
"texture": SubResource("AtlasTexture_36dho")
}, {
"duration": 1.1,
"texture": SubResource("AtlasTexture_yh6i2")
}, {
"duration": 1.1,
"texture": SubResource("AtlasTexture_nv4vc")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax3m3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vlem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eeqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x828")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1k8q")
}],
"loop": true,
"name": &"side_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6mvm")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_57lvd")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_ie7r7")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_vq3lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pukcj")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_1htnp")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_m376e")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_6b312")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_lisdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1x1j")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.8,
"texture": SubResource("AtlasTexture_3smsa")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_8erm5")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_f1ek2")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_tx1dd")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_gymyn")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_pu2lt")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_ukyrk")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_7dp3o")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_h4iuc")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_fd4e3")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_qqcod")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_8gxox")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x3wgy"]
size = Vector2(98, 101)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f1ek2"]
size = Vector2(59.5, 58)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tx1dd"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_left = 50
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gymyn"]
bg_color = Color(0, 0.782874, 0.838515, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_left = 50
anti_aliasing = false

[node name="Player" type="CharacterBody2D"]
z_index = 2
z_as_relative = false
y_sort_enabled = true
position = Vector2(5, 9)
collision_layer = 23
collision_mask = 23
script = ExtResource("1_tx1dd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, -16)
shape = SubResource("RectangleShape2D_3smsa")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-3.01143, -60.4149)
scale = Vector2(1.06692, 1.06692)
sprite_frames = SubResource("SpriteFrames_bi64h")
animation = &"side_idle"
frame_progress = 0.838167

[node name="DialogInteractionArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogInteractionArea"]
position = Vector2(-2, -46.5)
shape = SubResource("RectangleShape2D_x3wgy")

[node name="player_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(-3, -26)
shape = SubResource("RectangleShape2D_f1ek2")
debug_color = Color(0.972549, 0, 0, 0.419608)

[node name="attack_cooldown" type="Timer" parent="."]

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.8

[node name="regen_timer" type="Timer" parent="."]
wait_time = 8.003
autostart = true

[node name="InteractingComponent" parent="." instance=ExtResource("11_gymyn")]
position = Vector2(0, -37)

[node name="sfx_attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_pu2lt")
volume_db = -8.712
area_mask = 31

[node name="sfx_interact" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_ukyrk")
volume_db = 11.645

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.364706)
light_mask = 63
visibility_layer = 63
z_index = 1
z_as_relative = false
y_sort_enabled = true
texture = ExtResource("14_7dp3o")

[node name="sfx_bite" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_h4iuc")
volume_db = -8.039

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
z_index = 3
offset_left = 20.0
offset_top = 26.0
offset_right = 267.0
offset_bottom = 64.0
scale = Vector2(1.4, 1.4)
theme_override_styles/background = SubResource("StyleBoxFlat_tx1dd")
theme_override_styles/fill = SubResource("StyleBoxFlat_gymyn")
show_percentage = false

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="timeout" from="regen_timer" to="." method="_on_regen_timer_timeout"]
